--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".MyShopApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -13,7 +14,7 @@
         android:theme="@style/Theme.MyShopApplication"
         tools:targetApi="31" >
         <activity
-            android:name=".ShoppingActivity"
+            android:name=".activities.ShoppingActivity"
             android:exported="false" >
             <meta-data
                 android:name="android.app.lib_name"
